<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30px"
    android:paddingBottom="15px">
    <TextView
        android:id="@+id/mainFeaturedBtn"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_btn_main_featured"
        android:drawablePadding="5dp"
        android:textSize="9sp"
        android:textColor="@drawable/selector_main_tab_text_color"
        android:text="@string/text_featured"/>
    <TextView
        android:id="@+id/mainStacksBtn"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_btn_main_stacks"
        android:drawablePadding="5dp"
        android:textSize="9sp"
        android:textColor="@drawable/selector_main_tab_text_color"
        android:text="@string/text_stacks"/>
    <TextView
        android:id="@+id/mainSearchBtn"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_btn_main_search"
        android:drawablePadding="5dp"
        android:textSize="9sp"
        android:textColor="@drawable/selector_main_tab_text_color"
        android:text="@string/text_search"/>
    <TextView
        android:id="@+id/mainFindBtn"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_btn_main_find"
        android:drawablePadding="5dp"
        android:textSize="9sp"
        android:visibility="gone"
        android:textColor="@drawable/selector_main_tab_text_color"
        android:text="@string/text_find"/>
    <TextView
        android:id="@+id/mainUserBtn"
        android:layout_width="0px"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/selector_btn_main_user"
        android:drawablePadding="5dp"
        android:textSize="9sp"
        android:textColor="@drawable/selector_main_tab_text_color"
        android:text="@string/text_mine"/>
</LinearLayout>